--- a/package.json
+++ b/package.json
@@ -8,11 +8,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.1.11",
     "vue": "^3.2.25"
   },
   "devDependencies": {
+    "@types/node": "^17.0.29",
     "@vitejs/plugin-vue": "^2.3.1",
+    "sass": "^1.51.0",
     "typescript": "^4.5.4",
+    "unplugin-auto-import": "^0.7.1",
+    "unplugin-vue-components": "^0.19.3",
     "vite": "^2.9.5",
     "vue-tsc": "^0.34.7"
   }
